Email-verification code added

--- a/DailyPlannerService/src/main/resources/templates/forgot-password-form.html
+++ b/DailyPlannerService/src/main/resources/templates/forgot-password-form.html
@@ -31,30 +31,34 @@
 
 
     <h3 class="m-lg-5">Forgot Password</h3>
-    <form th:action="@{/registration/forgot-password}" method="post" class="px-4" th:object="${user}>
+<!--    <form th:action="@{/registration/forgot-password}" method="post" class="px-4" th:object="${user}>-->
 
-        <div class="mb-3 row">
-            <p></p>
-            <label for="email" class="col-sm-2 col-form-label">Enter your email</label>
-            <div class="col-sm-4">
-<!--                <input type="text" class="form-control" id="email" name="email" required autofocus="autofocus">-->
-           
-            <input
-                      class="form-control"
-                      id="email" autofocus="autofocus"
-                      name="email"
-                      placeholder="Enter email address"
-                      th:field="*{email}"
-                      type="email" />
-              <p th:errors = "*{email}" class="text-danger"
-                 th:if="${#fields.hasErrors('email')}"></p>
-           
-            </div>
+<!-- <form th:action="@{/registration/forgot-password}" method="post" class="px-4" th:object="${user}>-->
+ 
+   <form
+            method="post"
+            role="form"
+            th:action="@{/registration/forgot-password}"
+            th:object="${user}" >
+ 
+   
+<div class="mb-3 row">
+	<p></p>
+	<label for="email" class="col-sm-2 col-form-label">Enter your email</label>
+	<div class="col-sm-4">
+		<input type="text" class="form-control" id="email" name="email" required autofocus="autofocus">
+	</div>
+	<div class="mb-3 col-sm-4">
+		<button type="submit" class="btn btn-success"> Verify email</button>
+	</div>
+</div>
+            
+            
             
             <div class="mb-3 col-sm-4">
                 <button type="submit" class="btn btn-success"> Verify email</button>
             </div>
-        </div>
+     
     </form>
 </div>
 </body>
