--- a/DailyPlannerService/src/main/resources/templates/password-reset-form.html
+++ b/DailyPlannerService/src/main/resources/templates/password-reset-form.html
@@ -30,11 +30,11 @@
                        id="password" 
                        name="password" 
                        placeholder="Enter password" 
-                       th:field="*{password}" 
+                      
                        type="password" 
                /> 
-               <p th:errors = "*{password}" class="text-danger" 
-                  th:if="${#fields.hasErrors('password')}"></p> 
+<!--               <p th:errors = "*{password}" class="text-danger" -->
+<!--                  th:if="${#fields.hasErrors('password')}"></p> -->
              </div> 
              
                     <div class="form-group mb-3"> 
@@ -44,11 +44,11 @@
                        id="confirmPassword" 
                        name="confirmPassword" 
                        placeholder="Enter confirmPassword" 
-                       th:field="*{confirmPassword}" 
+                      
                        type="password" 
                /> 
-               <p th:errors = "*{confirmPassword}" class="text-danger" 
-                  th:if="${#fields.hasErrors('confirmPassword')}"></p> 
+<!--               <p th:errors = "*{confirmPassword}" class="text-danger" -->
+<!--                  th:if="${#fields.hasErrors('confirmPassword')}"></p> -->
              </div> 
 
 
