--- a/DailyPlannerService/src/main/resources/templates/forgot-password-form.html
+++ b/DailyPlannerService/src/main/resources/templates/forgot-password-form.html
@@ -30,7 +30,8 @@
     </div>
 
 
-    <h3 class="m-lg-5">Forgot Password</h3>
+    <h3 class="m-lg-5">Forgot Password? </h3>
+    <h2 class="m-lg-5">Enter your registered email-id</h2>
 <!--    <form th:action="@{/registration/forgot-password}" method="post" class="px-4" th:object="${user}>-->
 
 <!-- <form th:action="@{/registration/forgot-password}" method="post" class="px-4" th:object="${user}>-->
@@ -44,7 +45,7 @@
    
 <div class="mb-3 row">
 	<p></p>
-	<label for="email" class="col-sm-2 col-form-label">Enter your email</label>
+	<label for="email" class="col-sm-2 col-form-label">Enter your email :</label>
 	<div class="col-sm-4">
 		<input type="text" class="form-control" id="email" name="email" required autofocus="autofocus">
 	</div>
@@ -53,11 +54,6 @@
 	</div>
 </div>
             
-            
-            
-            <div class="mb-3 col-sm-4">
-                <button type="submit" class="btn btn-success"> Verify email</button>
-            </div>
      
     </form>
 </div>
