--- a/DailyPlannerService/src/main/resources/templates/login.html
+++ b/DailyPlannerService/src/main/resources/templates/login.html
@@ -91,7 +91,7 @@
 										here</a>
 								</span>
 								
-								  <span><a href="/" th:href="@{registration/forgot-password-request}">Forgot password?</a> </span>
+								  <span><a href="/" th:href="@{registration/forgot-password-request}">| Forgot password?</a> </span>
 								
 							</div>
 						</form>
