--- a/DailyPlannerService/src/main/resources/templates/forgot-password-form.html
+++ b/DailyPlannerService/src/main/resources/templates/forgot-password-form.html
@@ -30,8 +30,8 @@
     </div>
 
 
-    <h3 class="m-lg-5">Forgot Password? </h3>
-    <h2 class="m-lg-5">Enter your registered email-id</h2>
+    <h3 class="m-lg-5">Forgot Password? | Enter your registered email-id </h3>
+
 <!--    <form th:action="@{/registration/forgot-password}" method="post" class="px-4" th:object="${user}>-->
 
 <!-- <form th:action="@{/registration/forgot-password}" method="post" class="px-4" th:object="${user}>-->
