--- a/DailyPlannerService/src/main/resources/templates/password-reset-form.html
+++ b/DailyPlannerService/src/main/resources/templates/password-reset-form.html
@@ -38,12 +38,12 @@
              </div> 
              
                     <div class="form-group mb-3"> 
-               <label class="form-label">confirmPassword</label> 
+               <label class="form-label">Confirm Password</label> 
                <input 
                        class="form-control" 
                        id="confirmPassword" 
                        name="confirmPassword" 
-                       placeholder="Enter confirmPassword" 
+                       placeholder="Enter confirm password" 
                       
                        type="password" 
                /> 
