--- a/DailyPlannerService/src/main/resources/templates/password-reset-form.html
+++ b/DailyPlannerService/src/main/resources/templates/password-reset-form.html
@@ -10,6 +10,21 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
 </head>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" th:href="@{/index}">Daily Planner System</a>
+    
+    </div>
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<li class="nav-item">
+				<a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+			</li>
+		</ul>
+	</div>
+</nav>
+
 <body>
 <div class="container offset-sm-2 col-md-8 mt-lg-5">
   
@@ -61,6 +76,34 @@
         </form>
     </div>
 </div>
+
+<br>
+<br>
+
+	<footer class="footer-distributed">
+
+		<div class="footer-right">
+			<center>
+				<p class="footer-company-about">
+
+					<strong>Become focused, organized, and calm with Daily
+						Planner.</strong> <br>The world’s #1 task manager and to-do list app
+
+				</p>
+			</center>
+		</div>
+		
+			<div class="footer-left">
+
+			<center>
+				<p class="footer-company-name">
+					Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
+				</p>
+			</center>
+		</div>
+		
+	</footer>
+
 
 </body>
 </html>
