UI code updated

--- a/DailyPlannerService/src/main/resources/templates/todos.html
+++ b/DailyPlannerService/src/main/resources/templates/todos.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>All Todos</title>
+<title>All Todos | Daily Planner System</title>
 </head>
 <body>
 	<table class="table table-striped table-hover table-bordered">
