--- a/DailyPlannerService/src/main/resources/templates/password-reset-form.html
+++ b/DailyPlannerService/src/main/resources/templates/password-reset-form.html
@@ -4,7 +4,7 @@
 >
 <head>
     <meta charset="UTF-8">
-    <title>Reset Password Page</title>
+    <title>Reset Password Page | Daily Planner System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
