--- a/DailyPlannerService/src/main/resources/templates/password-reset-form.html
+++ b/DailyPlannerService/src/main/resources/templates/password-reset-form.html
@@ -39,7 +39,7 @@
             <h2 class="mb-4">Reset your password </h2>
 
                  <div class="form-group mb-3"> 
-               <label class="form-label">Password</label> 
+               <label class="form-label">New Password:</label> 
                <input 
                        class="form-control" 
                        id="password" 
@@ -53,7 +53,7 @@
              </div> 
              
                     <div class="form-group mb-3"> 
-               <label class="form-label">Confirm Password</label> 
+               <label class="form-label">New Confirm Password:</label> 
                <input 
                        class="form-control" 
                        id="confirmPassword" 
