Added about page

--- a/DailyPlannerService/src/main/resources/templates/contact.html
+++ b/DailyPlannerService/src/main/resources/templates/contact.html
@@ -43,7 +43,7 @@
       </div>
       <div th:if="${param.success}">
           <div class="alert alert-info">
-            You have successfully submitted our feedback!
+           We will get in touch with you soon !
           </div>
       </div>
       <div class="card-body">
