--- a/DailyPlannerService/src/main/resources/templates/index.html
+++ b/DailyPlannerService/src/main/resources/templates/index.html
@@ -36,6 +36,9 @@ body {
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/about}">About</a>
+                </li>
             </ul>
         </div>
     </div>
