--- a/DailyPlannerService/src/main/resources/templates/todos.html
+++ b/DailyPlannerService/src/main/resources/templates/todos.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>All Todos | Daily Planner System</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+	<title>All Todos | Daily Planner System</title>
 </head>
+
 <body>
 	<table class="table table-striped table-hover table-bordered">
 
@@ -30,10 +36,10 @@
 
 
 	</table>
-	
+
 	<br>
 
-<footer class="footer-distributed">
+	<footer class="footer-distributed">
 
 		<div class="footer-right">
 			<center>
@@ -45,8 +51,8 @@
 				</p>
 			</center>
 		</div>
-		
-			<div class="footer-left">
+
+		<div class="footer-left">
 
 			<center>
 				<p class="footer-company-name">
@@ -54,8 +60,9 @@
 				</p>
 			</center>
 		</div>
-		
+
 	</footer>
 
 </body>
+
 </html>
