--- a/DailyPlannerService/src/main/resources/templates/forgot-password-form.html
+++ b/DailyPlannerService/src/main/resources/templates/forgot-password-form.html
@@ -7,13 +7,16 @@
 	<title>Forgot Password | Daily Planner System</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Daily Planner System</a>
-    
-    </div>
+	<div class="container-fluid">
+		<a class="navbar-brand" th:href="@{/index}">Daily Planner System</a>
+
+	</div>
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 			<li class="nav-item">
@@ -66,10 +69,10 @@
 
 		</form>
 	</div>
-	
+
 	<br>
 	<br>
-		<footer class="footer-distributed">
+	<footer class="footer-distributed">
 
 		<div class="footer-right">
 			<center>
@@ -81,8 +84,8 @@
 				</p>
 			</center>
 		</div>
-		
-			<div class="footer-left">
+
+		<div class="footer-left">
 
 			<center>
 				<p class="footer-company-name">
@@ -90,9 +93,9 @@
 				</p>
 			</center>
 		</div>
-		
+
 	</footer>
-	
+
 </body>
 
 </html>
