--- a/DailyPlannerService/src/main/resources/templates/login.html
+++ b/DailyPlannerService/src/main/resources/templates/login.html
@@ -1,89 +1,90 @@
 <!DOCTYPE html>
-<html lang="en"
-    xmlns:th="http://www.thymeleaf.org"
->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | Daily Planner System</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
-         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
- 
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Login | Daily Planner System</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+	<link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Daily Planner System</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
-                </li>
-            </ul>
-        </div>
-</nav>
-<br /><br />
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" th:href="@{/index}">Daily Planner System</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+				style="color: ghostwhite;">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<br /><br />
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 offset-md-3">
 
-            <div th:if="${param.error}">
-                <div class="alert alert-danger">Invalid Email or Password</div>
-            </div>
-            <div th:if="${param.logout}">
-                <div class="alert alert-success"> You have been logged out.</div>
-            </div>
-            <div th:if="${param.verified}">
-             <div class="alert alert-info">
-            This account has already been verified, please log in here.
-          </div>
-           </div>
-            <div th:if="${param.valid}">
-             <div class="alert alert-info">
-            Email verified successfully, please log in here.
-          </div>
-           </div>
-             <div th:if="${param.reset_success}">
-             <div class="alert alert-info">
-            Password reset successfully, please log in here.
-          </div>
-           </div>
-          
+				<div th:if="${param.error}">
+					<div class="alert alert-danger">Invalid Email or Password</div>
+				</div>
+				<div th:if="${param.logout}">
+					<div class="alert alert-success"> You have been logged out.</div>
+				</div>
+				<div th:if="${param.verified}">
+					<div class="alert alert-info">
+						This account has already been verified, please log in here.
+					</div>
+				</div>
+				<div th:if="${param.valid}">
+					<div class="alert alert-info">
+						Email verified successfully, please log in here.
+					</div>
+				</div>
+				<div th:if="${param.reset_success}">
+					<div class="alert alert-info">
+						Password reset successfully, please log in here.
+					</div>
+				</div>
 
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="text-center">Login </h2>
-                </div>
-                <div class="card-body">
-												
-				   <form method="post" role="form" th:action="@{/login}"
-					 th:object="${user}">
-					 
+
+				<div class="card">
+					<div class="card-header">
+						<h2 class="text-center">Login </h2>
+					</div>
+					<div class="card-body">
+
+						<form method="post" role="form" th:action="@{/login}" th:object="${user}">
+
 							<div class="form-group mb-3">
-								<label class="control-label"> Email</label> <input type="email"
-									id="username" name="username" class="form-control"
-									placeholder="Enter email address" />
+								<label class="control-label"> Email</label> <input type="email" id="username"
+									name="username" class="form-control" placeholder="Enter email address" />
 							</div>
 							<br>
 							<div class="form-group mb-3">
-								<label class="control-label"> Password</label> <input
-									type="password" id="password" name="password"
-									class="form-control" placeholder="Enter password" />
+								<label class="control-label"> Password</label> <input type="password" id="password"
+									name="password" class="form-control" placeholder="Enter password" />
 							</div>
 							<br>
 							<div class="form-group mb-3">
@@ -91,20 +92,21 @@
 								<span> Not registered ? <a th:href="@{/register}">Register/Signup
 										here</a>
 								</span>
-								
-								  <span><a href="/" th:href="@{registration/forgot-password-request}">| Forgot password?</a> </span>
-								
+
+								<span><a href="/" th:href="@{registration/forgot-password-request}">| Forgot
+										password?</a> </span>
+
 							</div>
 						</form>
 					</div>
-            </div>
-        </div>
-    </div>
-</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-<br>
+	<br>
 
-<br>
+	<br>
 
 	<footer class="footer-distributed">
 
@@ -118,8 +120,8 @@
 				</p>
 			</center>
 		</div>
-		
-			<div class="footer-left">
+
+		<div class="footer-left">
 
 			<center>
 				<p class="footer-company-name">
@@ -127,9 +129,10 @@
 				</p>
 			</center>
 		</div>
-		
+
 	</footer>
 
 
 </body>
+
 </html>
