--- a/DailyPlannerService/src/main/resources/templates/register.html
+++ b/DailyPlannerService/src/main/resources/templates/register.html
@@ -1,144 +1,121 @@
 <!DOCTYPE html>
-<html lang="en"
-  xmlns:th="http://www.thymeleaf.org"
->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registeration | Daily Planner System</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Registeration | Daily Planner System</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{/index}">Daily Planner System</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
-        </li>
-      </ul>
-    </div>
-    
-  </div>
-   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
-                </li>
-            </ul>
-        </div>
-</nav>
-<br /><br /><br />
-<div class="container">
-  <div class="row col-md-8 offset-md-2">
-    <div class="card">
-      <div class="card-header">
-          <h2 class="text-center">Registration Form</h2>
-      </div>
-      <div th:if="${param.success}">
-          <div class="alert alert-info">
-            You have successfully registered our service, please check your email to complete your registration.
-          </div>
-      </div>
-      <div class="card-body">
-          <form
-            method="post"
-            role="form"
-            th:action="@{/register/save}"
-            th:object="${user}" >
-            
-            
-            <div class="form-group mb-3">
-              <label class="form-label">Full Name</label>
-              <input
-                      class="form-control"
-                      id="firstName" autofocus="autofocus"
-                      name="firstName"
-                      placeholder="Enter full name"
-                      th:field="*{firstName}"
-                      type="text"
-              />
-              <p th:errors = "*{firstName}" class="text-danger"
-              th:if="${#fields.hasErrors('firstName')}"></p>
-              </div>
-
-
-             <div class="form-group mb-3">
-              <label class="form-label">Email</label>
-              <input
-                      class="form-control"
-                      id="email" autofocus="autofocus"
-                      name="email"
-                      placeholder="Enter email address"
-                      th:field="*{email}"
-                      type="email" />
-              <p th:errors = "*{email}" class="text-danger"
-                 th:if="${#fields.hasErrors('email')}"></p>
-            </div>
-
-
-            <div class="form-group mb-3">
-              <label class="form-label">Password</label>
-              <input
-                      class="form-control"
-                      id="password" autofocus="autofocus"
-                      name="password"
-                      placeholder="Enter password"
-                      th:field="*{password}"
-                      type="password" />
-              <p th:errors = "*{password}" class="text-danger"
-                 th:if="${#fields.hasErrors('password')}"></p>
-            </div>
-            
-            
-             <div class="form-group mb-3">
-              <label class="form-label">Confirm Password</label>
-              <input
-                      class="form-control"
-                      id="confirmPassword" autofocus="autofocus"
-                      name="confirmPassword"
-                      placeholder="Enter confirm password"
-                      th:field="*{confirmPassword}"
-                      type="password" />
-              <p th:errors = "*{confirmPassword}" class="text-danger"
-                 th:if="${#fields.hasErrors('confirmPassword')}"></p>
-            </div>
-  
-            
-            <div class="form-group mb-3">
-              <label class="form-label">Enter your address</label>
-              
-               <textarea rows="5" cols="25"  class="form-control" id="address"
-                      name="address" autofocus="autofocus"
-                      placeholder="Enter your address" th:field="*{address}"> </textarea>
-              <p th:errors = "*{address}" class="text-danger"
-                 th:if="${#fields.hasErrors('address')}"></p>
-            </div>
-
-			<div class="form-group">
-			  <button class="btn btn-primary" type="submit">Register</button>
-			  <span>Already registered? <a th:href="@{/login}">Login here</a></span>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" th:href="@{/index}">Daily Planner System</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+				style="color: ghostwhite;">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
+					</li>
+				</ul>
 			</div>
 
+		</div>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<br /><br /><br />
+	<div class="container">
+		<div class="row col-md-8 offset-md-2">
+			<div class="card">
+				<div class="card-header">
+					<h2 class="text-center">Registration Form</h2>
+				</div>
+				<div th:if="${param.success}">
+					<div class="alert alert-info">
+						You have successfully registered our service, please check your email to complete your
+						registration.
+					</div>
+				</div>
+				<div class="card-body">
+					<form method="post" role="form" th:action="@{/register/save}" th:object="${user}">
 
 
-		</form>
-      </div>
-    </div>
-  </div>
-</div>
+						<div class="form-group mb-3">
+							<label class="form-label">Full Name</label>
+							<input class="form-control" id="firstName" autofocus="autofocus" name="firstName"
+								placeholder="Enter full name" th:field="*{firstName}" type="text" />
+							<p th:errors="*{firstName}" class="text-danger" th:if="${#fields.hasErrors('firstName')}">
+							</p>
+						</div>
 
 
-<br><br>
+						<div class="form-group mb-3">
+							<label class="form-label">Email</label>
+							<input class="form-control" id="email" autofocus="autofocus" name="email"
+								placeholder="Enter email address" th:field="*{email}" type="email" />
+							<p th:errors="*{email}" class="text-danger" th:if="${#fields.hasErrors('email')}"></p>
+						</div>
 
-<footer class="footer-distributed">
+
+						<div class="form-group mb-3">
+							<label class="form-label">Password</label>
+							<input class="form-control" id="password" autofocus="autofocus" name="password"
+								placeholder="Enter password" th:field="*{password}" type="password" />
+							<p th:errors="*{password}" class="text-danger" th:if="${#fields.hasErrors('password')}"></p>
+						</div>
+
+
+						<div class="form-group mb-3">
+							<label class="form-label">Confirm Password</label>
+							<input class="form-control" id="confirmPassword" autofocus="autofocus"
+								name="confirmPassword" placeholder="Enter confirm password"
+								th:field="*{confirmPassword}" type="password" />
+							<p th:errors="*{confirmPassword}" class="text-danger"
+								th:if="${#fields.hasErrors('confirmPassword')}"></p>
+						</div>
+
+
+						<div class="form-group mb-3">
+							<label class="form-label">Enter your address</label>
+
+							<textarea rows="5" cols="25" class="form-control" id="address" name="address"
+								autofocus="autofocus" placeholder="Enter your address"
+								th:field="*{address}"> </textarea>
+							<p th:errors="*{address}" class="text-danger" th:if="${#fields.hasErrors('address')}"></p>
+						</div>
+
+						<div class="form-group">
+							<button class="btn btn-primary" type="submit">Register</button>
+							<span>Already registered? <a th:href="@{/login}">Login here</a></span>
+						</div>
+
+
+
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<br><br>
+
+	<footer class="footer-distributed">
 
 		<div class="footer-right">
 			<center>
@@ -150,8 +127,8 @@
 				</p>
 			</center>
 		</div>
-		
-			<div class="footer-left">
+
+		<div class="footer-left">
 
 			<center>
 				<p class="footer-company-name">
@@ -159,8 +136,9 @@
 				</p>
 			</center>
 		</div>
-		
+
 	</footer>
 
 </body>
+
 </html>
