--- a/DailyPlannerService/src/main/resources/templates/user-todo.html
+++ b/DailyPlannerService/src/main/resources/templates/user-todo.html
@@ -1,72 +1,76 @@
 <!DOCTYPE html>
-<html lang="en"
-    xmlns:th="http://www.thymeleaf.org"
->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User-Todo | Daily Planner System</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>User-Todo | Daily Planner System</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Daily Planner System</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<br>
-<div class="container">
-    <div class="row col-md-10">
-        <h2>List of Todos </h2>
-    </div>
-    <br>
-    <br>
-    <table class="table table-bordered table-hover">
-        <thead class="table-dark">
-            <tr>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Created Date</th>
-                <th>Target Date</th>
-                 <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-        
-            <tr th:each = "user : ${users}">
-            
-                <td th:text = "${user.title}"></td>          
-                <td th:text = "${user.description}"></td>
-                <td th:text = "${user.createdDate}"></td>
-                <td th:text = "${user.targetDate}"></td>
-			  
-			   <td>
-			   
-			   <a class="btn btn-warning" th:href="@{/editTodo/{id}(id=${user.userId})}">Edit-Todo</a> 
-			   <a class="btn btn-danger" th:href="@{/todos/deleteTodoById/{id}(id=${user.userId})}">Delete-Todo</a>
-			   </td>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" th:href="@{/index}">Daily Planner System</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+				style="color: ghostwhite;">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<br>
+	<div class="container">
+		<div class="row col-md-10">
+			<h2>List of Todos </h2>
+		</div>
+		<br>
+		<br>
+		<table class="table table-bordered table-hover">
+			<thead class="table-dark">
+				<tr>
+					<th>Title</th>
+					<th>Description</th>
+					<th>Created Date</th>
+					<th>Target Date</th>
+					<th>Action</th>
+				</tr>
+			</thead>
+			<tbody>
 
-			</tr>
-			
-        </tbody>
-    </table>
-</div>
+				<tr th:each="user : ${users}">
 
-<br><br><br><br><br>
-	
+					<td th:text="${user.title}"></td>
+					<td th:text="${user.description}"></td>
+					<td th:text="${user.createdDate}"></td>
+					<td th:text="${user.targetDate}"></td>
+
+					<td>
+
+						<a class="btn btn-warning" th:href="@{/editTodo/{id}(id=${user.userId})}">Edit-Todo</a>
+						<a class="btn btn-danger"
+							th:href="@{/todos/deleteTodoById/{id}(id=${user.userId})}">Delete-Todo</a>
+					</td>
+
+				</tr>
+
+			</tbody>
+		</table>
+	</div>
+
+	<br><br><br><br><br>
+
 	<footer class="footer-distributed">
 
 		<div class="footer-right">
@@ -79,8 +83,8 @@
 				</p>
 			</center>
 		</div>
-		
-			<div class="footer-left">
+
+		<div class="footer-left">
 
 			<center>
 				<p class="footer-company-name">
@@ -88,7 +92,8 @@
 				</p>
 			</center>
 		</div>
-		
+
 	</footer>
 </body>
+
 </html>
