--- a/DailyPlannerService/src/main/resources/templates/user-view.html
+++ b/DailyPlannerService/src/main/resources/templates/user-view.html
@@ -10,6 +10,12 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<style>
+		body {
+			background-color: #86B3D1
+		}
+	</style>
+
 </head>
 
 <style>
@@ -72,7 +78,7 @@
 
 	<br>
 
-	<table class="table table-bordered table-hover">
+	<table class="table table-bordered table-hover" style="color: black;background-color: floralwhite;">
 		<thead class="table-dark">
 			<tr>
 				<th>Full Name</th>
