--- a/DailyPlannerService/src/main/resources/templates/about.html
+++ b/DailyPlannerService/src/main/resources/templates/about.html
@@ -1,31 +1,97 @@
 <!DOCTYPE html>
-<html lang="en"
-    xmlns:th="http://www.thymeleaf.org"
->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us | Daily Planner System</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
-          	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>About us | Daily Planner System</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
+
+<style>
+	#firstname {
+
+		text-align: center;
+		font-family: monospace;
+		font-size: 20px;
+		color: #4D6D9A;
+	}
+
+	body {
+		background-color: #86B3D1
+	}
+</style>
+
 <body>
 
-<h3>About us</h3>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" th:href="@{/index}" style="color: #F78888;"><b>Daily Planner System</b></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+				style="color: ghostwhite;">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" th:href="@{/register}"><b>Register</b></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" th:href="@{/login}"><b>Login</b></a>
+					</li>
 
-<p>Our website is free, non-sponsored, and created for those who are busy!!</p>
-<p>It's easy to take notes and go without tension</p>
+				</ul>
+			</div>
+		</div>
 
-<footer class="footer-distributed">
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" th:href="@{/contact}"><b>Contact</b></a>
+				</li>
+			</ul>
+		</div>
+
+
+
+	</nav>
+
+	<br>
+
+
+	<h1 style="text-align: center;text-decoration: wavy;font-family: monospace;color: peachpuff;"><u>!! ABOUT ME !! </u>
+	</h1>
+
+	<br><br>
+	<p id="firstname">Dedicated developer and open-source contributor with more than 2 years' experience in the IT
+		industry.</p>
+	<p id="firstname">Essentially, this website was created so that daily/upcoming tasks can be accomplished without
+		tension and worry.
+	</p>
+	<p id="firstname">Our website is free, non-sponsored, and created for those who are busy!!</p>
+	<p id="firstname">I am looking forward to interacting with all of you.</p>
+
+	<br>
+	<br>
+	<marquee style="color: red;" bgcolor="white">Connect with me on LinkedIn -
+		https://www.linkedin.com/in/nikita-jawali-599260193/ and GitHub -
+		https://github.com/nikitajawali99 and via email - nikitajawali99@gmail.com.</marquee>
+
+
+	<br>
+	<br>
+	<br>
+	<footer class="footer-distributed">
 
 		<div class="footer-right">
 			<center>
-				<p class="footer-company-about">
+				<p class="footer-company-about" style="color: floralwhite;font-family: monospace;">
 
 					<strong>Become focused, organized, and calm with Daily
 						Planner.</strong> <br>The world’s #1 task manager and to-do list app
@@ -33,17 +99,19 @@
 				</p>
 			</center>
 		</div>
-		
-			<div class="footer-left">
+
+		<div class="footer-left">
 
 			<center>
-				<p class="footer-company-name">
+				<p class="footer-company-about" style="color: floralwhite;font-family: monospace;">
+
 					Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
 				</p>
 			</center>
 		</div>
-		
+
 	</footer>
 
 </body>
+
 </html>
