--- a/DailyPlannerService/src/main/resources/templates/error.html
+++ b/DailyPlannerService/src/main/resources/templates/error.html
@@ -9,6 +9,12 @@
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 	<link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+
+	<style>
+		body {
+			background-color: #86B3D1
+		}
+	</style>
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
