--- a/DailyPlannerService/src/main/resources/templates/index.html
+++ b/DailyPlannerService/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
-			<a class="navbar-brand" th:href="@{/index}" style="color: #F78888;"><b>Daily Planner System</b></a>
+			<a class="navbar-brand" th:href="@{/index}" style="color: whitesmoke;"><b>Daily Planner System</b></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
 				style="color: ghostwhite;">
@@ -60,9 +60,7 @@
 	</nav>
 	<br /><br />
 	<div class="container">
-		<!--    <div class="row">-->
-		<!--        <h1 class="text-center" style="font-weight: 400;font-style: italic;font-family: cursive;color: peachpuff;"> <u>Daily Planner System</u> </h1>-->
-		<!--    </div>-->
+
 		<br>
 		<br>
 		<div class="customer">
@@ -91,7 +89,7 @@
 
 		<div class="footer-right">
 			<center>
-				<p class="footer-company-about" style="color: floralwhite;font-family: monospace;">
+				<p class="footer-company-about" style="color: black;font-family: monospace;">
 
 					<strong>Become focused, organized, and calm with Daily
 						Planner</strong> <br>The world’s #1 task manager and to-do list app
@@ -103,7 +101,7 @@
 		<div class="footer-left">
 
 			<center>
-				<p class="footer-company-name" style="color: floralwhite;font-family: monospace;">
+				<p class="footer-company-name" style="color: black;font-family: monospace;">
 					Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
 				</p>
 			</center>
