--- a/DailyPlannerService/src/main/resources/templates/todos.html
+++ b/DailyPlannerService/src/main/resources/templates/todos.html
@@ -9,10 +9,15 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 	<title>All Todos | Daily Planner System</title>
+	<style>
+		body {
+			background-color: #86B3D1
+		}
+	</style>
 </head>
 
 <body>
-	<table class="table table-striped table-hover table-bordered">
+	<table class="table table-striped table-hover table-bordered" style="background-color: floralwhite;">
 
 		<thead class="table-dark">
 
