--- a/DailyPlannerService/src/main/resources/templates/users.html
+++ b/DailyPlannerService/src/main/resources/templates/users.html
@@ -15,13 +15,17 @@
 			color: white;
 			text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 		}
+
+		body {
+			background-color: #86B3D1
+		}
 	</style>
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
-			<a class="navbar-brand" th:href="@{/index}">Daily Planner System</a>
+			<a class="navbar-brand" th:href="@{/index}" style="text-align: left;">Daily Planner System</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
 				style="color: ghostwhite;">
@@ -46,7 +50,7 @@
 			</center>
 		</div>
 		<br><br>
-		<table class="table table-bordered table-hover">
+		<table class="table table-bordered table-hover" style="background-color: floralwhite;">
 			<thead class="table-dark">
 				<tr>
 					<th>Name</th>
