--- a/DailyPlannerService/src/main/resources/templates/about.html
+++ b/DailyPlannerService/src/main/resources/templates/about.html
@@ -21,6 +21,16 @@
 		color: #4D6D9A;
 	}
 
+	#footer {
+		position: fixed;
+		padding: 10px 10px 0px 10px;
+		bottom: 0;
+		width: 100%;
+		/* Height of the footer*/
+		height: 80px;
+	}
+
+
 	body {
 		background-color: #86B3D1
 	}
@@ -87,30 +97,32 @@
 	<br>
 	<br>
 	<br>
-	<footer class="footer-distributed">
+	<div id="footer">
+		<footer class="footer-distributed">
 
-		<div class="footer-right">
-			<center>
-				<p class="footer-company-about" style="color: floralwhite;font-family: monospace;">
+			<div class="footer-right">
+				<center>
+					<p class="footer-company-about" style="color: black;font-family: monospace;">
 
-					<strong>Become focused, organized, and calm with Daily
-						Planner.</strong> <br>The world’s #1 task manager and to-do list app
+						<strong>Become focused, organized, and calm with Daily
+							Planner.</strong> <br>The world’s #1 task manager and to-do list app
 
-				</p>
-			</center>
-		</div>
+					</p>
+				</center>
+			</div>
 
-		<div class="footer-left">
+			<div class="footer-left">
 
-			<center>
-				<p class="footer-company-about" style="color: floralwhite;font-family: monospace;">
+				<center>
+					<p class="footer-company-about" style="color: black;font-family: monospace;">
 
-					Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
-				</p>
-			</center>
-		</div>
+						Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
+					</p>
+				</center>
+			</div>
 
-	</footer>
+		</footer>
+	</div>
 
 </body>
 
