--- a/DailyPlannerService/src/main/resources/templates/edit-todo.html
+++ b/DailyPlannerService/src/main/resources/templates/edit-todo.html
@@ -14,6 +14,15 @@
 		body {
 			background-color: #86B3D1
 		}
+
+		#footer {
+			position: fixed;
+			padding: 10px 10px 0px 10px;
+			bottom: 0;
+			width: 100%;
+			/* Height of the footer*/
+			height: 75px;
+		}
 	</style>
 
 </head>
@@ -36,7 +45,7 @@
 			</div>
 		</div>
 	</nav>
-	<br /><br /><br />
+	
 	<div class="container">
 		<div class="row col-md-8 offset-md-2">
 			<div class="card">
@@ -100,30 +109,31 @@
 	</div>
 
 	<br>
-	<footer class="footer-distributed">
+	<div id="footer">
+		<footer class="footer-distributed">
 
-		<div class="footer-right">
-			<center>
-				<p class="footer-company-about">
+			<div class="footer-right">
+				<center>
+					<p class="footer-company-about">
 
-					<strong>Become focused, organized, and calm with Daily
-						Planner.</strong> <br>The world’s #1 task manager and to-do list app
+						<strong>Become focused, organized, and calm with Daily
+							Planner.</strong> <br>The world’s #1 task manager and to-do list app
 
-				</p>
-			</center>
-		</div>
+					</p>
+				</center>
+			</div>
 
-		<div class="footer-left">
+			<div class="footer-left">
 
-			<center>
-				<p class="footer-company-name">
-					Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
-				</p>
-			</center>
-		</div>
+				<center>
+					<p class="footer-company-name">
+						Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
+					</p>
+				</center>
+			</div>
 
-	</footer>
-
+		</footer>
+	</div>
 </body>
 
 </html>
