--- a/DailyPlannerService/src/main/resources/templates/index.html
+++ b/DailyPlannerService/src/main/resources/templates/index.html
@@ -20,6 +20,15 @@
 	body {
 		background-color: #86B3D1
 	}
+
+	#footer {
+		position: fixed;
+		padding: 10px 10px 0px 10px;
+		bottom: 0;
+		width: 100%;
+		/* Height of the footer*/
+		height: 80px;
+	}
 </style>
 
 <body>
@@ -84,30 +93,31 @@
 	</div>
 	<br>
 
+	<div id="footer">
+		<footer class="footer-distributed">
 
-	<footer class="footer-distributed">
+			<div class="footer-right">
+				<center>
+					<p class="footer-company-about" style="color: black;font-family: monospace;">
 
-		<div class="footer-right">
-			<center>
-				<p class="footer-company-about" style="color: black;font-family: monospace;">
+						<strong>Become focused, organized, and calm with Daily
+							Planner</strong> <br>The world’s #1 task manager and to-do list app
 
-					<strong>Become focused, organized, and calm with Daily
-						Planner</strong> <br>The world’s #1 task manager and to-do list app
+					</p>
+				</center>
+			</div>
 
-				</p>
-			</center>
-		</div>
+			<div class="footer-left">
 
-		<div class="footer-left">
+				<center>
+					<p class="footer-company-name" style="color: black;font-family: monospace;">
+						Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
+					</p>
+				</center>
+			</div>
 
-			<center>
-				<p class="footer-company-name" style="color: black;font-family: monospace;">
-					Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
-				</p>
-			</center>
-		</div>
-
-	</footer>
+		</footer>
+	</div>
 
 </body>
 
