--- a/DailyPlannerService/src/main/resources/templates/register.html
+++ b/DailyPlannerService/src/main/resources/templates/register.html
@@ -14,6 +14,8 @@
 		body {
 			background-color: #86B3D1
 		}
+
+		
 	</style>
 
 </head>
@@ -121,29 +123,31 @@
 
 	<br><br>
 
-	<footer class="footer-distributed">
+	<div id="footer">
+		<footer class="footer-distributed">
 
-		<div class="footer-right">
-			<center>
-				<p class="footer-company-about">
+			<div class="footer-right">
+				<center>
+					<p class="footer-company-about">
 
-					<strong>Become focused, organized, and calm with Daily
-						Planner.</strong> <br>The world’s #1 task manager and to-do list app
+						<strong>Become focused, organized, and calm with Daily
+							Planner.</strong> <br>The world’s #1 task manager and to-do list app
 
-				</p>
-			</center>
-		</div>
+					</p>
+				</center>
+			</div>
 
-		<div class="footer-left">
+			<div class="footer-left">
 
-			<center>
-				<p class="footer-company-name">
-					Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
-				</p>
-			</center>
-		</div>
+				<center>
+					<p class="footer-company-name">
+						Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
+					</p>
+				</center>
+			</div>
 
-	</footer>
+		</footer>
+	</div>
 
 </body>
 
