--- a/DailyPlannerService/src/main/resources/templates/user-todo.html
+++ b/DailyPlannerService/src/main/resources/templates/user-todo.html
@@ -14,6 +14,14 @@
 		body {
 			background-color: #86B3D1
 		}
+		#footer {
+			position: fixed;
+			padding: 10px 10px 0px 10px;
+			bottom: 0;
+			width: 100%;
+			/* Height of the footer*/
+			height: 80px;
+		}
 	</style>
 </head>
 
@@ -74,8 +82,8 @@
 		</table>
 	</div>
 
-	<br><br><br><br><br>
-
+	
+<div id="footer">
 	<footer class="footer-distributed">
 
 		<div class="footer-right">
@@ -99,6 +107,7 @@
 		</div>
 
 	</footer>
+	</div>
 </body>
 
 </html>
