--- a/DailyPlannerService/src/main/resources/templates/register.html
+++ b/DailyPlannerService/src/main/resources/templates/register.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body>
+<div>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
 			<a class="navbar-brand" th:href="@{/index}">Daily Planner System</a>
@@ -47,6 +47,7 @@
 		</div>
 	</nav>
 	<br /><br /><br />
+	<div class="form-center">
 	<div class="container">
 		<div class="row col-md-8 offset-md-2">
 			<div class="card">
@@ -118,6 +119,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 
 
