bugfix update user

--- a/DailyPlannerService/src/main/resources/templates/login.html
+++ b/DailyPlannerService/src/main/resources/templates/login.html
@@ -84,6 +84,11 @@
 					<div class="alert alert-info">
 						You have changed our email, please check your email inbox to verify.
 					</div>
+				</div>		
+				<div th:if="${param.complete}">
+					<div class="alert alert-info">
+						Details updated successfully.
+					</div>
 				</div>
 
 				<div class="card">
